website: fix scrolling/loading issue on iOS

--- a/website/source/assets/stylesheets/_global.scss
+++ b/website/source/assets/stylesheets/_global.scss
@@ -1,6 +1,4 @@
 html {
-  height: 100%;
-  min-height: 100%;
   text-rendering: optimizeLegibility;
   -webkit-font-smoothing: antialiased;
   overflow-x: hidden;
@@ -13,8 +11,6 @@ body {
   font-size: $font-size;
   font-family: $font-family-open-sans;
   font-weight: $font-weight-reg;
-  height: 100%;
-  min-height: 100%;
   overflow-x: hidden;
 }
 
